...
    @IBOutlet private var progressView: UIProgressView!
    
    private var estimatedProgressObservation: NSKeyValueObservation?
    
    override func viewDidLoad() {
        super.viewDidLoad()
        webView.accessibilityIdentifier = "UnsplashWebView"
        
        if presenter == nil {
            presenter = WebViewPresenter(authHelper: AuthHelper())
        }
        presenter?.view = self
        
...
